# cpp-template

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml  codeql-analysis.yml
cmake/: cmake_uninstall.cmake.in
cmake/dependencies/: FindDep1.cmake  FindDep2.cmake
include/MyProject/: Add.h  Subtract.h
src/: Add.cc  Adder.cc  Subtract.cc  Subtractor.cc
tests/: CMakeLists.txt  test_add.cc  test_subtract.cc
