<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>MyProject</name>

    <version>1.0.0</version>

    <description>My Project</description>

    <maintainer email="ardabbour@gmail.com">Abdul Rahman Dabbour</maintainer>

    <license>MIT</license>

    <url type="repository">https://github.com/ardabbour/cpp_template</url>

    <author email="ardabbour@gmail.com">Abdul Rahman Dabbour</author>

    <buildtool_depend>cmake</buildtool_depend>

    <!-- <depend>Dep1</depend> -->
    <!-- <depend>Dep2</depend> -->

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
